<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AndroidApplication</string>
    <string name="load_image">Load Image</string>
    <string name="please_enter_image_url">Please enter image url</string>
    <string name="flags">Flags</string>
    <string name="animation">Animation</string>
    <string name="austria">Austria</string>
    <string name="armenia">Armenia</string>
    <string name="belgium">Belgium</string>
    <string name="latvia">Latvia</string>
    <string name="denmark">Denmark</string>
    <string name="spain">Spain</string>
    <string name="start">Старт</string>
    <string name="competition">Соревнование по сбору урожая в Беларуси</string>
    <string name="region">Область</string>
    <string name="brest_region">Брестская область</string>
    <string name="vitebsk_region">Витебская область</string>
    <string name="grodno_region">Гродненская область</string>
    <string name="vegetables">Овощи</string>
    <string name="potatoes">Картофель</string>
    <string name="cabbage">Капуcта</string>
    <string name="beet">Свекла</string>
    <string name="number_ton">Кол-во, тыс.тон</string>
    <string name="champion">Победитель:</string>
    <string name="mother_s_day">Mother\'s day</string>
    <string name="congratulate_on">Congratulate on</string>
    <string name="congratulation_text">Поздравление</string>
    <string name="mothers_day_text">с Днем Матери</string>
    <string name="dear_mother_text">Дорогая Мама!</string>
    <string name="congratulation_mother_text">Поздравляю тебя с праздником.</string>
    <string name="wish_text">Желаю тебе добра, любви и здоровья!</string>
    <string name="coffee_day">Coffee day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_coffee">Add coffee</string>
    <string name="see_coffee_collection">See coffee collection</string>
    <string name="show_coffee">show_coffee</string>
    <string name="add">Add</string>
    <string name="enter_kind_of_coffee">enter kind of coffee</string>
    <string name="enter_price_of_coffee">enter price of coffee</string>
    <string name="enter_url_image_for_coffee">enter URL-image for coffee</string>
    <string name="coffee_collection">Coffee collection</string>
    <string name="coffee_collection_see">Coffee collection</string>
    <string name="photo_text_view">Фото</string>
    <string name="view_text_view">Вид</string>
    <string name="price_text_view">Цена, руб.</string>
    <string name="coffeename">coffeeName</string>
    <string name="coffeeprice">coffeePrice</string>
    <string name="registration">Registration</string>
    <string name="username_string">Username</string>
    <string name="register_text">Register</string>
    <string name="error">Error</string>
    <string name="password_is_8_characters">Password must not be less than 8 characters</string>
    <string name="you_are_registered">You are registered</string>
    <string name="book_database">Book database</string>
    <string name="book_database_text_view">Book database</string>
    <string name="add_button">Add</string>
    <string name="see_button">See</string>
    <string name="book_picture_image_view">Book picture</string>
    <string name="author_edit_text">author</string>
    <string name="title_edit_text">title</string>
    <string name="year_edit_text">year</string>
    <string name="author_text_view">Author</string>
    <string name="title_text_view">Title</string>
    <string name="year_text_view">Year</string>
    <string name="search_edit_text">search</string>
    <string name="networking_button">Networking</string>
    <string name="cryptocurrencies_text_view">Cryptocurrencies</string>
    <string name="name_string_text_view">Name</string>
    <string name="price_string_text_view">Price</string>
    <string name="percent_change_1h_string_text_view">Percent change 1h</string>
    <string name="symbol_string_text_view">Symbol</string>
    <string name="light_sensor_button">Light sensor</string>
    <string name="value_string_tv">Value</string>
    <string name="name_string_tv">Name</string>
    <string name="light_sensor_text_view">Light sensor</string>
    <string name="fibonacci_numbers">Fibonacci numbers</string>
    <string name="notification_button">Notification</string>
    <string name="timer_text_view">Timer</string>
    <string name="stop_button">Stop</string>
    <string name="start_button">Start</string>
    <string name="appwidget_text">Weather Widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="city_text_view">City</string>
    <string name="condition_text_view">Condition</string>
    <string name="temperature_text_view">T</string>
    <string name="time_text_view">Time</string>
    <string name="weather_widget_button">Weather widget</string>
    <string name="open_the_home_screen_text_view">Open the home screen</string>
    <string name="the_weather_widget_text_view">The weather widget</string>
    <string name="covid_info_button">Covid info</string>
    <string name="covid_info_text_view">Covid Info</string>
    <string name="country_text_view">Country</string>
    <string name="total_confirmed_text_view">Total Confirmed</string>
    <string name="total_deaths_text_view">Total Deaths</string>
    <string name="total_recovered_text_view">Total Recovered</string>
    <string name="date_text_view">Date</string>
</resources>