<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".coffee_day.FragmentStart">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/show_coffee"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee_picture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/coffee_collection"
        android:textColor="#EED08A"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_add_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="400dp"
        android:background="#F8DE99"
        android:text="@string/add_coffee"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_see_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="400dp"
        android:background="#F8DE99"
        android:text="@string/see_coffee_collection"
        android:textStyle="bold" />
</FrameLayout>