<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/update_widget"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/appwidget_text"
        android:layout_margin="8dp"
        android:background="@drawable/update_24" />

    <ImageView
        android:id="@+id/home_widget"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/update_widget"
        android:layout_margin="8dp"
        android:background="@drawable/home_24" />

    <TextView
        android:id="@+id/city_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_text_view"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="5dp"
        android:text="@string/city_text_view"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/condition_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_text_view"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="5dp"
        android:text="@string/condition_text_view"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/temperature_text_view"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/appwidget_text"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="43dp"
        android:gravity="center_vertical"
        android:text="@string/temperature_text_view"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appwidget_text"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="12dp"
        android:text="@string/time_text_view"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/icon_image_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/appwidget_text"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="43dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp"
        android:visibility="invisible" />

</RelativeLayout>